--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,11 @@ dependencies {
 
     //sdp
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+
+    //Circle Indicator
+    implementation 'me.relex:circleindicator:2.1.6'
 }
